fixes stretched header image

--- a/components/elements/ImageContent/index.scss
+++ b/components/elements/ImageContent/index.scss
@@ -5,6 +5,7 @@
 
   &__image {
     width: 100%;
+    display: block;
 
     img {
       width: 100%;
